--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aioredis==2.0.1
+aiosqlite==0.21.0
 alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
@@ -29,6 +29,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
+redis==6.1.0
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
