--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,49 @@
-aiosqlite==0.21.0
-alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
-async-timeout==5.0.1
-bcrypt==4.3.0
 certifi==2025.4.26
-click==8.2.1
+click==8.1.8
 dnspython==2.7.0
 ecdsa==0.19.1
+email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cache2==0.2.2
+fastapi-cli==0.0.7
 greenlet==3.2.2
 h11==0.16.0
 httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
 idna==3.10
-Mako==1.3.10
+Jinja2==3.1.6
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-motor==3.7.1
+mdurl==0.1.2
 passlib==1.7.4
 pendulum==3.1.0
 pyasn1==0.4.8
 pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
-pymongo==4.13.0
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
+PyYAML==6.0.2
 redis==6.1.0
+rich==14.0.0
+rich-toolkit==0.14.6
 rsa==4.9.1
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
-typing-inspection==0.4.0
+typer==0.15.4
+typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzdata==2025.2
 uvicorn==0.34.2
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
