all task is done

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.4.26
 click==8.1.8
+distro==1.9.0
 dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
@@ -9,6 +10,7 @@ fastapi==0.115.12
 fastapi-cache2==0.2.2
 fastapi-cli==0.0.7
 greenlet==3.2.2
+groq==0.25.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
